fix: stylings & spacing for home, tag, housing.

--- a/src/components/Tag/Tag.scss
+++ b/src/components/Tag/Tag.scss
@@ -3,12 +3,12 @@
 .tag {
   display: flex;
   justify-content: center;
+  align-items: center;
+  text-align: center;
   background-color: $primary-color;
   color: $light-color;
   width: 100%;
   height: 100%;
-  max-width: 115px;
-  max-height: 25px;
   padding: 3px;
   border-radius: 10px;
   font-size: clamp($mobile-xs-font-size, 3vw, $xs-font-size);
